<resources>
    <string name="app_name" translatable="false">MathBlitz</string>
    <string name="app_id" translatable="false">1075819727556</string>
    <string name="package_name" translatable="false">io.strikebit.mathblitz</string>
    <string name="add_id_key" translatable="false">ca-app-pub-7297349899740519~4115633979</string>
    <string name="leaderboard_time_trial_id" translatable="false">CgkIxJXp3qcfEAIQAA</string>
    <string name="leaderboard_survival_id" translatable="false">CgkIxJXp3qcfEAIQAQ</string>
    <string name="game_shared_preferences" translatable="false">game_shared_preferences</string>
    <string name="high_score_time_trial_key" translatable="false">high_score_time_trial</string>
    <string name="high_score_survival_key" translatable="false">high_score_survival</string>
    <string name="total_questions_answered" translatable="false">total_questions_answered</string>
    <string name="total_questions_correct" translatable="false">total_questions_correct</string>
    <string name="fastest_correct_answer" translatable="false">fastest_correct_answer</string>
    <string name="most_correct_in_a_row" translatable="false">most_correct_in_a_row</string>
    <string name="signin_other_error" translatable="false">Sign in error</string>
    <string name="start_timer_default" translatable="false">60</string>
    <string name="quit">Quit</string>
    <string name="score_default">Score: %d</string>
    <string name="life_1">Life 1</string>
    <string name="life_2">Life 2</string>
    <string name="life_3">Life 3</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="high_score">High score: %d</string>
    <string name="label_high_score_time_trial">Time trial high score</string>
    <string name="label_high_score_survival">Survival high score</string>
    <string name="label_questions_answered">Questions answered</string>
    <string name="label_questions_correct">Questions correct</string>
    <string name="label_fastest_answer">Fastest answer</string>
    <string name="label_most_correct_in_a_row">Most correct in a row</string>
    <string name="label_percent_correct">Percent correct</string>
    <string name="stats">Stats</string>
    <string name="my_stats">My stats</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="game_modes">Game modes</string>
    <string name="time_trial">Time Trial</string>
    <string name="survival">Survival</string>
    <string name="practice">Practice</string>
    <string name="play_again">Play again</string>
    <string name="new_high_score">New high score!</string>
    <string name="new_fastest_answer">New fastest answer (%.2f seconds)</string>
    <string name="fastest_time_in_seconds">%.2f seconds</string>
    <string name="times_up">Time\'s up! Final score: %d</string>
    <string name="game_over">Game over. Final score: %d</string>
    <string name="difficulty">Difficulty</string>
    <string name="very_easy">Very easy</string>
    <string name="easy">Easy</string>
    <string name="medium">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>
    <string name="genius">Genius</string>
</resources>
